--- a/compose.yaml
+++ b/compose.yaml
@@ -1,9 +1,13 @@
 services:
   mongodb:
     image: 'mongo:latest'
+    container_name : 'jot_mongo'
     environment:
       - 'MONGO_INITDB_DATABASE=mydatabase'
       - 'MONGO_INITDB_ROOT_PASSWORD=secret'
       - 'MONGO_INITDB_ROOT_USERNAME=root'
+    volumes:
+    - './init-mongo.js:docker-entrypoint-initdb.d/init-mongo.js:ro'
+		- './mongo-volume:/data/db'
     ports:
       - '27017'
